# senior

./: .gitignore  LICENSE  Makefile  README.md  ReadMe.md
daemon/: Cargo.toml  build.rs
daemon/src/: main.rs  protocol.rs
daemon/src/analyzer/: diff.rs  impact.rs  mod.rs
daemon/src/llm/: cactus_llm.rs  cactus_llm_stub.rs  mod.rs  voice.rs
daemon/src/store/: db.rs  mod.rs
daemon/tests/: integration_test.rs
docs/plans/: 2026-03-03-ux-improvements-design.md  2026-03-03-ux-improvements.md
extension/: package-lock.json  package.json  senior-0.0.1.vsix  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
extension/__mocks__/: vscode.ts
extension/src/: commands.ts  extension.ts
extension/src/__tests__/: client.test.ts  commands.test.ts  manager.test.ts  mute-state.test.ts  voice.test.ts
extension/src/__tests__/integration/: daemon-client.test.ts  prerequisites.test.ts
extension/src/daemon/: client.ts  manager.ts
extension/src/ui/: panel.html  panel.ts
extension/src/voice/: controller.ts  mute-state.ts
