[package]
name = "callmeout-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "callmeout-daemon"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tokio-test = "0.4"
