[package]
name = "senior-daemon"
version = "0.1.0"
edition = "2021"
description = "Local Rust daemon for Senior — AI pair programmer that analyses git diffs via on-device LLM inference"
license = "MIT"
repository = "https://github.com/ifere/senior"
homepage = "https://github.com/ifere/senior"

[[bin]]
name = "senior-daemon"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tokio-test = "0.4"
